# Camera-Handler

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  debug_clusters.pnm  debug_lines.ps  debug_output.pnm  debug_output.ps  debug_preprocess.pnm  debug_quads.ps  debug_quads_fixed.pnm  debug_quads_raw.pnm  debug_samples.pnm  debug_segmentation.pnm  debug_threshold.pnm  execute.sh  iwastolazytowriteamakefile.sh  main.c  pseudomakefile.sh  run
include/: april.h  posthandler.h
src/: april.c  april.cc  debug_clusters.pnm  debug_lines.ps  debug_output.pnm  debug_output.ps  debug_preprocess.pnm  debug_quads.ps  debug_quads_fixed.pnm  debug_quads_raw.pnm  debug_samples.pnm  debug_segmentation.pnm  debug_threshold.pnm  posthandler.c
src/impl/: Makefile  a.out  main.c  main2.c  opencv_demo.cc
